# pomodoro-poetry

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose-dev.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_17_0853-b8b2d193ff4d_.py  2025_03_20_2333-9e50dcc6d686_.py
core/: __init__.py  db.py  settings.py
crud/: __init__.py  interface.py  operations.py
handlers/: __init__.py  add_fixtures.py  home.py  ping.py  tasks.py
models/: __init__.py  models.py
templates/: tasks.html
