[tool.poetry]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = ["Vasya Vasin <vasya@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
loguru = "^0.7.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

